--- a/Exercice2.html
+++ b/Exercice2.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Exercice2</title>
+    <title>exercice2 javaScripts</title>
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <script src="Exercice2.js">
+    <script type="text/javascript">
+      var nom = "Doe", prenom = "John", ville = "New-York";
+      var aAfficher = "Nom : " + nom + "\n" + "Prénom : " + prenom + "\n" + "Ville : "+ ville;
+      alert(aAfficher);
     </script>
   </body>
 </html>
